# pyjs

./: .flake8  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  benchmark_pyjs.py  build_browser.sh  build_docs.sh  build_mkdocs.sh  build_repl.sh  build_tests.sh  embed_pycpp.py  environment-dev.yml  environment-dev_3.1.45.yml  environment-dev_3.1.58.yml  hello_webloop.py  merge_js.py  mkdocs.yml  package.json  pre.js  pyjsConfig.cmake.in  pyjs_pre.js  runner.py  test_pyjs.py
.github/workflows/: docs.yml  main.yml
build_utils/: merge_js.py
docs/: JavaScript_API.md  Makefile  Python_API.md  conf.py  design.md  embed.md  index.md  index.rst  installation.md  post_build.py  requirements.txt  try_from_js.md  try_from_py.md
docs/_src/: about.md  faq.md  related_projects.md  usage.md  workflow.md
docs/_src/examples/: index.rst  pyb2d_demo.md  python_repl_demo.md  xeus_python.md
environments/: environment-dev.yml  environment-docs-wasm.yml  environment-docs.yml  environment-wasm-test.yml  environment-wasm.yml
examples/: README.rst  js_api_tour.js  py_api_tour.py  repl.html
include/pyjs/: convert.hpp  convert.py  core.py  error_handling.py  export_js_module.hpp  export_js_proxy.hpp  export_mamba.hpp  export_py_object.hpp  export_pyjs_module.hpp  extend_js_val.py  inflate.hpp  install_conda_file.hpp  macro_magic.hpp  mpool.hpp  pure_python_init.hppy  untar.hpp  unzstd.hpp  webloop.py
include/pyjs/js/: export_js_module.hpp
include/pyjs/post_js/: fixes.js
include/pyjs/pre_js/: apply.js  cleanup.js  constants.js  create_once_callable.js  fetch.js  get_set_attr.js  get_type_string.js  init.js  literal_map.js  load_pkg.js  make_proxy.js  operators.js  platform.js  promise.js  shortcuts.js  wait_for_dependencies.js  wrap_result.js
include/pyjs/pre_js/dynload/: README.md  dynload.js
include/pyjs/py/: convert.py  core.py  export_pyjs_module.hpp  extend_js_val.py
include/pyjs/pycpp/: convert.py  convert_py_to_js.py  core.py  error_handling.py  extend_js_val.py  mamba.py  pyodide_polyfill.py  webloop.py
module/pyjs/: __init__.py  cli.py  convert.py  convert_py_to_js.py  core.py  error_handling.py  extend_js_val.py  pyodide_polyfill.py  webloop.py  webloop_README.md
runner_tools/: __init__.py  node_main.js  runner.html  runner_main.html  runner_worker.html  runners_utils.py  utils.js  worker.js
sandbox/: newmamba.py
scripts/: build_debug2.sh  build_mkdocs.sh  build_pyjs.sh
src/: convert.cpp  export_js_module.cpp  export_js_proxy.cpp  export_mamba.cpp  export_py_object.cpp  export_pyjs_module.cpp  inflate.cpp  install_conda_file.cpp  js_timestamp.cpp  main.cpp  runtime.cpp  untar.cpp  unzstd.cpp
src/pyjs/: convert.hpp  export_js_module.cpp  export_js_proxy.hpp  export_py_object.hpp  export_pyjs_module.cpp  pure_python_init.hppy
src/pyjs/js/: export_js_module.cpp
src/pyjs/py/: export_js_proxy.hpp  export_pyjs_module.cpp
stubs/pyjs_core/: __init__.py  __init__.pyi
tests/: main.py  test.js.in  test_utils.py
tests/atests/: __init__.py  async_tests.py
tests/js_tests/: __init__.py  test_main.js
tests/tests/: conftest.py  test_conversion.py  test_pyjs.py
